# OpenWatchFace

./: README.md
3D-models/: buttons.stl  outer_shell.stl
ESP32-S3-WatchFace/: ESP32-S3-WatchFace.ino  app_appearance.h  app_files.h  app_find_phone.h  app_menu.h  app_notifications.h  app_player.h  app_power.h  app_settings.h  app_timer.h  app_wifi_ble.h  batt_health_sd.h  ble_ancs.h  ble_player_ams.h  ble_provision.h  clocks.h  core_voltage.h  cpu_usage.h  device_info.h  haptics.h  lib_versions.h  notif_archive_sd.h  notif_icons.h  notif_net.h  notif_store.h  notify_ca.h  partitions.csv  player_state.h  power_model.h  quick_shade.h  screen_cache.h  sd_card.h  settings_store.h  sleep_power.h  storage_fs.h  timer_store.h  ui_fonts.h  watchface.h  wifi_store.h
OpenWatchFace/: OpenWatchFace.ino  app_appearance.h  app_files.h  app_find_phone.h  app_menu.h  app_notifications.h  app_player.h  app_power.h  app_settings.h  app_timer.h  app_wifi_ble.h  audio_alarm.h  batt_health_sd.h  ble_ancs.h  ble_gadgetbridge.h  ble_provision.h  board.h  board_clock.h  board_power.h  board_sleep.h  board_ws_c6_touch_lcd_147.h  board_ws_s3_touch_amoled_206.h  chime_melody.h  core_voltage.h  cpu_usage.h  device_info.h  display_jd9853.h  haptics.h  icons22.c  lv_psram_alloc.cpp  montserrat_clock_110.c  notif_archive_sd.h  notif_net.h  notif_store.h  overclock.h  partitions_c6_8mb.csv  player_state.h  power_model.h  quick_shade.h  screen_cache.h  (+10 more)
WatchCompanion/: README.md
libraries/: lv_conf.h
notify-server/: Cargo.toml  README.md
notify-server/src/: main.rs
patches/: README.md  (+7 more)
(+18 files in other folders)
